--- a/habit/package.json
+++ b/habit/package.json
@@ -9,13 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "@types/chroma-js": "^3.1.2",
+    "@vicons/carbon": "^0.13.0",
+    "@vicons/fa": "^0.13.0",
+    "@vicons/fluent": "^0.13.0",
+    "@vicons/ionicons5": "^0.13.0",
+    "@vicons/material": "^0.13.0",
+    "chroma-js": "^3.1.2",
+    "dayjs": "^1.11.19",
+    "echarts": "^6.0.0",
+    "pocketbase": "^0.26.3",
+    "unplugin-auto-import": "^20.2.0",
+    "unplugin-vue-components": "^30.0.0",
+    "vue": "^3.5.22",
+    "vue-echarts": "^8.0.1",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "naive-ui": "^2.43.1",
     "typescript": "~5.9.3",
+    "vfonts": "^0.0.3",
     "vite": "^7.1.7",
     "vue-tsc": "^3.1.0"
   }
