--- a/habit/package.json
+++ b/habit/package.json
@@ -15,6 +15,7 @@
     "@vicons/fluent": "^0.13.0",
     "@vicons/ionicons5": "^0.13.0",
     "@vicons/material": "^0.13.0",
+    "@vicons/tabler": "^0.13.0",
     "chroma-js": "^3.1.2",
     "dayjs": "^1.11.19",
     "echarts": "^6.0.0",
