--- a/habit/package.json
+++ b/habit/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/chroma-js": "^3.1.2",
+    "@types/mathjs": "^9.4.1",
     "@vicons/carbon": "^0.13.0",
     "@vicons/fa": "^0.13.0",
     "@vicons/fluent": "^0.13.0",
@@ -19,6 +20,7 @@
     "chroma-js": "^3.1.2",
     "dayjs": "^1.11.19",
     "echarts": "^6.0.0",
+    "mathjs": "^15.1.0",
     "mitt": "^3.0.1",
     "pocketbase": "^0.26.3",
     "unplugin-auto-import": "^20.2.0",
